feat: Complete microservice system

--- a/swagger-ui.html
+++ b/swagger-ui.html
@@ -26,11 +26,8 @@
         header {
             text-align: center;
             color: white;
+            padding: 40px 20px;
             margin-bottom: 40px;
-            padding: 30px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
         }
 
         header h1 {
@@ -46,15 +43,15 @@
 
         .services-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 25px;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
         .service-card {
             background: white;
             border-radius: 15px;
-            padding: 25px;
+            padding: 30px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.3);
             transition: transform 0.3s, box-shadow 0.3s;
             position: relative;
@@ -228,6 +225,7 @@
                 grid-template-columns: 1fr;
             }
         }
+        
     </style>
 </head>
 <body>
